--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ interface Props {
 	title: string;
 }
 
-const { title } = Astro.props;
+const { title, url = Astro.url } = Astro.props;
 
 import { Image } from 'astro:assets';
 import SquareLogo from '../images/code-coral-logo-square.png';
@@ -29,6 +29,7 @@ import Footer from '../components/Footer.astro';
         basic: {
           title: `${title}`,
           type: "website",
+					url: `${url}`,
           image: `${SquareLogo.src}`,
         }
       }}
