miscellaneous cleanup items

--- a/src/components/WorkSection.astro
+++ b/src/components/WorkSection.astro
@@ -77,6 +77,7 @@ import HillHearBetter from '../images/hill-hear-better-graphic.jpg';
 <style>
 	#work {
 		margin-bottom: 110px;
+    scroll-margin-top: 115px;
 	}
 
 	#work h2 {
