--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,25 @@ import { Image } from 'astro:assets';
 import HeaderLogo from '../images/code-coral-icon.svg';
 ---
 
+<script>
+// add sticky class on scroll
+if (typeof window !== 'undefined') {
+  window.onscroll = function() {
+    let body = document.body; //IE 'quirks'
+    let doc = document.documentElement; //IE with doctype
+    doc = (doc.clientHeight) ? doc : body;
+    let distance = (window.pageYOffset || doc.scrollTop) - (doc.clientTop || 0);
+
+    if (distance === 0) {
+      document.querySelector('header').classList.remove('sticky-time');
+      console.log("doc.scrollTop == 0");
+    } else {
+      document.querySelector('header').classList.add('sticky-time');
+    }
+  }
+}
+</script>
+
 <header>
   <div class="container">
     <div class="header-logo">
@@ -11,8 +30,8 @@ import HeaderLogo from '../images/code-coral-icon.svg';
       </a>
     </div>
     <nav class="header-nav">
-      <a href="#work">Work</a>
-      <a href="#contact">Contact</a>
+      <a href="/#work">Work</a>
+      <a href="/#contact">Contact</a>
     </nav>
   </div>
 </header>
@@ -20,10 +39,27 @@ import HeaderLogo from '../images/code-coral-icon.svg';
 <style>
   header {
     width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px 0;
+    padding: 7px 0 5px;
     line-height: 1;
+    background-color: var(--white);
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+  }
+
+  @media (width >= 768px) {
+    header {
+      padding: 20px 0;
+    }
+  }
+
+  header.sticky-time {
+    box-shadow: rgba(68, 68, 68, 0.25) 0px 1px 3px 0px;
+    z-index: 1000;
+    transition: 0.25s all;
+    padding: 7px 0 5px;
   }
 
   header .container {
