--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -56,6 +56,8 @@ import Layout from '../layouts/Layout.astro';
 <style>
 	main.page {
 		max-width: 850px;
-		margin: 0 auto 110px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 110px;
 	}
 </style>
