remove FinTech Law

--- a/src/components/ClientSection.astro
+++ b/src/components/ClientSection.astro
@@ -8,6 +8,7 @@
       <li><a href="https://darwinproject.org" target="_blank" rel="noopener">Darwin Project</a></li>
       <li><a href="https://fhf-cpa.com" target="_blank" rel="noopener">Flagel Huber Flagel</a></li>
       <li><a href="https://highlinecanal.com" target="_blank" rel="noopener">High Line Canal</a></li>
+      <li><a href="https://summerscamper5k.com" target="_blank" rel="noopener">HLCC Summer Scamper 5k</a></li>
       <li><a href="https://indianaartisan.org" target="_blank" rel="noopener">Indiana Artisan</a></li>
       <li><a href="https://mweliteservices.com" target="_blank" rel="noopener">Midwest Elite Services</a></li>
       <li><a href="https://modelgroup.net" target="_blank" rel="noopener">Model Group</a></li>
@@ -18,6 +19,7 @@
       <li><a href="https://traumafreeworld.org" target="_blank" rel="noopener">Trauma Free World</a></li>
       <li><a href="https://upsourcedaccounting.com" target="_blank" rel="noopener">Upsourced Accounting</a></li>
       <li><a href="https://vitoprovolones.com" target="_blank" rel="noopener">Vito Provolones</a></li>
+      <li><a href="https://wgarnett.com" target="_blank" rel="noopener">Wes Garnett</a></li>
     </ul>
 
     <div class="text-center">
