--- a/src/components/WorkSection.astro
+++ b/src/components/WorkSection.astro
@@ -2,7 +2,7 @@
 import { Image } from 'astro:assets';
 import LivingChurch from '../images/living-church-graphic.jpg';
 import GoodSense from '../images/good-sense-graphic.jpg';
-import Fintech from '../images/fintech-graphic.jpg';
+import Drapery from '../images/drapery-street-graphic.jpg';
 import PunchBug from '../images/punch-bug-graphic.jpg';
 import InteriorDetails from '../images/interior-details-graphic.jpg';
 import HillHearBetter from '../images/hill-hear-better-graphic.jpg';
@@ -36,12 +36,12 @@ import HillHearBetter from '../images/hill-hear-better-graphic.jpg';
       </div>
 
       <div class="work-item">
-        <a href="https://fintechlegal.io" target="_blank" rel="noopener">
-          <Image src={Fintech} alt="Fintech Law Graphic" width="1100" height="620" />
+        <a href="https://draperystreet.com" target="_blank" rel="noopener">
+          <Image src={Drapery} alt="Fintech Law Graphic" width="1100" height="620" />
         </a>
         <p>Designed & Developed: Code Coral</p>
-        <h3><a href="https://fintechlegal.io" target="_blank" rel="noopener">Fintech Law</a></h3>
-        <p>GatsbyJS with Contentful CMS</p>
+        <h3><a href="https://draperystreet.com" target="_blank" rel="noopener">Drapery Street</a></h3>
+        <p>Wordpress - Contracted by <a href="https://www.punchbugmarketing.com" target="_blank" rel="noopener">Punch Bug Marketing</a></p>
       </div>
 
       <div class="work-item">
