--- a/src/components/ClientSection.astro
+++ b/src/components/ClientSection.astro
@@ -7,16 +7,20 @@
       <li><a href="https://cappatrol.com" target="_blank" rel="noopener">Cap Patrol</a></li>
       <li><a href="https://darwinproject.org" target="_blank" rel="noopener">Darwin Project</a></li>
       <li><a href="https://fhf-cpa.com" target="_blank" rel="noopener">Flagel Huber Flagel</a></li>
+      <li><a href="https://www.freshtwiststudio.com" target="_blank" rel="noopener">Fresh Twist Studio</a></li>
       <li><a href="https://highlinecanal.com" target="_blank" rel="noopener">High Line Canal</a></li>
       <li><a href="https://summerscamper5k.com" target="_blank" rel="noopener">HLCC Summer Scamper 5k</a></li>
       <li><a href="https://indianaartisan.org" target="_blank" rel="noopener">Indiana Artisan</a></li>
+      <li><a href="https://indianadesigncenter.com" target="_blank" rel="noopener">Indiana Design Center</a></li>
       <li><a href="https://mweliteservices.com" target="_blank" rel="noopener">Midwest Elite Services</a></li>
       <li><a href="https://modelgroup.net" target="_blank" rel="noopener">Model Group</a></li>
       <li><a href="https://renaissancecincy.com" target="_blank" rel="noopener">Renaissance Renovations</a></li>
       <li><a href="https://rottweilerrescuefoundation.org" target="_blank" rel="noopener">Rottweiler Rescue Foundation</a></li>
+      <li><a href="https://rype.tv" target="_blank" rel="noopener">Rype.tv</a></li>
       <li><a href="https://sciarappaconstruction.com" target="_blank" rel="noopener">Sciarappa Construction</a></li>
       <li><a href="https://thevoiceofblackcincinnati.com" target="_blank" rel="noopener">The Voice Of Black Cincinnati</a></li>
       <li><a href="https://traumafreeworld.org" target="_blank" rel="noopener">Trauma Free World</a></li>
+      <li><a href="https://thetravelinghooga.com" target="_blank" rel="noopener">The Traveling Hooga</a></li>
       <li><a href="https://upsourcedaccounting.com" target="_blank" rel="noopener">Upsourced Accounting</a></li>
       <li><a href="https://vitoprovolones.com" target="_blank" rel="noopener">Vito Provolones</a></li>
       <li><a href="https://wgarnett.com" target="_blank" rel="noopener">Wes Garnett</a></li>
