update client list

--- a/src/components/ClientSection.astro
+++ b/src/components/ClientSection.astro
@@ -5,6 +5,7 @@
     <ul>
       <li><a href="https://calregional.com" target="_blank" rel="noopener">CalRegional</a></li>
       <li><a href="https://cappatrol.com" target="_blank" rel="noopener">Cap Patrol</a></li>
+      <li><a href="https://creatorsbrush.com" target="_blank" rel="noopener">Creator's Brush</a></li>
       <li><a href="https://darwinproject.org" target="_blank" rel="noopener">Darwin Project</a></li>
       <li><a href="https://fhf-cpa.com" target="_blank" rel="noopener">Flagel Huber Flagel</a></li>
       <li><a href="https://www.freshtwiststudio.com" target="_blank" rel="noopener">Fresh Twist Studio</a></li>
@@ -18,9 +19,9 @@
       <li><a href="https://rottweilerrescuefoundation.org" target="_blank" rel="noopener">Rottweiler Rescue Foundation</a></li>
       <li><a href="https://rype.tv" target="_blank" rel="noopener">Rype.tv</a></li>
       <li><a href="https://sciarappaconstruction.com" target="_blank" rel="noopener">Sciarappa Construction</a></li>
+      <li><a href="https://spectraconsultingpartners.com" target="_blank" rel="noopener">Spectra Consulting Partners</a></li>
       <li><a href="https://thevoiceofblackcincinnati.com" target="_blank" rel="noopener">The Voice Of Black Cincinnati</a></li>
       <li><a href="https://traumafreeworld.org" target="_blank" rel="noopener">Trauma Free World</a></li>
-      <li><a href="https://thetravelinghooga.com" target="_blank" rel="noopener">The Traveling Hooga</a></li>
       <li><a href="https://upsourcedaccounting.com" target="_blank" rel="noopener">Upsourced Accounting</a></li>
       <li><a href="https://vitoprovolones.com" target="_blank" rel="noopener">Vito Provolones</a></li>
       <li><a href="https://wgarnett.com" target="_blank" rel="noopener">Wes Garnett</a></li>
