--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,24 +1,27 @@
 <div id="hero-section">
-	<div class="container">
-		<h1>Front-End Developer, Designer, and Friend</h1>
-		<p>Hi! I'm Chris Costanza. I design & build my clients sweet looking, fast websites.</p>
-		<a href="#contact" class="btn"><span>Do you need one?</span></a>
-	</div>
+  <div class="container">
+    <h1>Web Designer, Front-end Developer and Friend</h1>
+    <p>
+      Hi! I'm Chris Costanza. I design & build my clients sweet looking, fast
+      websites from Cincinnati, Ohio.
+    </p>
+    <a href="#contact" class="btn"><span>Do you need one?</span></a>
+  </div>
 </div>
 
 <style>
-	#hero-section {
-		text-align: center;
+  #hero-section {
+    text-align: center;
     margin-top: 35px;
     margin-bottom: 110px;
-	}
+  }
 
-	#hero-section h1 {
-		margin-bottom: 40px;
-	}
+  #hero-section h1 {
+    margin-bottom: 40px;
+  }
 
-	#hero-section p {
-		max-width: 520px;
-		margin: 0 auto 12px;
-	}
+  #hero-section p {
+    max-width: 520px;
+    margin: 0 auto 12px;
+  }
 </style>
