--- a/src/components/WorkSection.astro
+++ b/src/components/WorkSection.astro
@@ -2,10 +2,10 @@
 import { Image } from 'astro:assets';
 import LivingChurch from '../images/living-church-graphic.jpg';
 import GoodSense from '../images/good-sense-graphic.jpg';
-import Drapery from '../images/drapery-street-graphic.jpg';
-import PunchBug from '../images/punch-bug-graphic.jpg';
-import InteriorDetails from '../images/interior-details-graphic.jpg';
-import HillHearBetter from '../images/hill-hear-better-graphic.jpg';
+import Creators from '../images/creators-brush-graphic.webp';
+import Rottweiler from '../images/rottweiler-graphic.webp';
+// import InteriorDetails from '../images/interior-details-graphic.jpg';
+// import HillHearBetter from '../images/hill-hear-better-graphic.jpg';
 ---
 
 <div id="work">
@@ -25,6 +25,15 @@ import HillHearBetter from '../images/hill-hear-better-graphic.jpg';
       </div>
 
       <div class="work-item">
+        <a href="https://creatorsbrush.com" target="_blank" rel="noopener">
+          <Image src={Creators} alt="Creator's Brush" width="1100" height="620" />
+        </a>
+        <p>Designed & Developed: Code Coral</p>
+        <h3><a href="https://creatorsbrush.com" target="_blank" rel="noopener">Creator's Brush</a></h3>
+        <p>Wordpress with Woocommerce</p>
+      </div>
+
+      <div class="work-item">
         <a href="https://goodsensemovement.org" target="_blank" rel="noopener">
           <Image src={GoodSense} alt="Good Sense Graphic" width="1100" height="620" />
         </a>
@@ -36,24 +45,15 @@ import HillHearBetter from '../images/hill-hear-better-graphic.jpg';
       </div>
 
       <div class="work-item">
-        <a href="https://draperystreet.com" target="_blank" rel="noopener">
-          <Image src={Drapery} alt="Fintech Law Graphic" width="1100" height="620" />
+        <a href="https://rottweilerrescuefoundation.org/" target="_blank" rel="noopener">
+          <Image src={Rottweiler} alt="Rottweiler Rescue Foundation Graphic" width="1100" height="620" />
         </a>
         <p>Designed & Developed: Code Coral</p>
-        <h3><a href="https://draperystreet.com" target="_blank" rel="noopener">Drapery Street</a></h3>
-        <p>Wordpress - Contracted by <a href="https://www.punchbugmarketing.com" target="_blank" rel="noopener">Punch Bug Marketing</a></p>
+        <h3><a href="https://rottweilerrescuefoundation.org/" target="_blank" rel="noopener">Rottweiler Rescue Foundation</a></h3>
+        <p>Wordpress</p>
       </div>
 
-      <div class="work-item">
-        <a href="https://www.punchbugmarketing.com" target="_blank" rel="noopener">
-          <Image src={PunchBug} alt="Punch Bug Graphic" width="1100" height="620" />
-        </a>
-        <p>Designed & Developed: Code Coral</p>
-        <h3><a href="https://www.punchbugmarketing.com" target="_blank" rel="noopener">Punch Bug Marketing</a></h3>
-        <p>Wordpress - Contracted by <a href="https://www.punchbugmarketing.com" target="_blank" rel="noopener">Punch Bug Marketing</a></p>
-      </div>
-
-      <div class="work-item">
+      <!-- <div class="work-item">
         <a href="https://interior-details.com" target="_blank" rel="noopener">
           <Image src={InteriorDetails} alt="Interior Details Graphic" width="1100" height="620" />
         </a>
@@ -69,7 +69,7 @@ import HillHearBetter from '../images/hill-hear-better-graphic.jpg';
         <p>Designed & Developed: Code Coral</p>
         <h3><a href="https://hillhearbetter.com" target="_blank" rel="noopener">Hill Hear Better</a></h3>
         <p>Wordpress - Contracted by <a href="https://www.punchbugmarketing.com" target="_blank" rel="noopener">Punch Bug Marketing</a></p>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
