Adding Ad Section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import HeroSection from '../components/HeroSection.astro';
 import WorkSection from '../components/WorkSection.astro';
 import ClientSection from '../components/ClientSection.astro';
 import ContactSection from '../components/ContactSection.astro';
+import AdsSection from '../components/AdsSection.astro';
 ---
 
 <Layout title="Front-end Developer, Web Designer - Cincinnati, Ohio - Code Coral">
@@ -12,6 +13,7 @@ import ContactSection from '../components/ContactSection.astro';
 		<WorkSection />
 		<ClientSection />
 		<ContactSection />
+		<AdsSection />
 	</main>
 </Layout>
 
