--- a/src/components/ClientSection.astro
+++ b/src/components/ClientSection.astro
@@ -1,17 +1,15 @@
 <div id="clients">
   <div class="container">
     <h2>A Few More Clients...</h2>
-    <p>Thankful to call these non-profits and businesses my clients. Some are current and some are a blast from the past.</p>
+    <p style="max-width: 900px;">Thankful to call these non-profits and businesses my clients. Some are current and some are a blast from the past. For more work examples please contact me below.</p>
     <ul>
       <li><a href="https://calregional.com" target="_blank" rel="noopener">CalRegional</a></li>
       <li><a href="https://cappatrol.com" target="_blank" rel="noopener">Cap Patrol</a></li>
-      <li><a href="https://creatorsbrush.com" target="_blank" rel="noopener">Creator's Brush</a></li>
       <li><a href="https://darwinproject.org" target="_blank" rel="noopener">Darwin Project</a></li>
       <li><a href="https://designtomarket.com" target="_blank" rel="noopener">Design To Market</a></li>
       <li><a href="https://greenwoodch.com/" target="_blank" rel="noopener">Greenwood Cemetery</a></li>
       <li><a href="https://highlinecanal.com" target="_blank" rel="noopener">High Line Canal</a></li>
       <li><a href="https://summerscamper5k.com" target="_blank" rel="noopener">HLCC Summer Scamper 5k</a></li>
-      <li><a href="https://rottweilerrescuefoundation.org" target="_blank" rel="noopener">Rottweiler Rescue Foundation</a></li>
       <li><a href="https://rype.tv" target="_blank" rel="noopener">Rype.tv</a></li>
       <li><a href="https://sciarappaconstruction.com" target="_blank" rel="noopener">Sciarappa Construction</a></li>
       <li><a href="https://skyviewestates.com" target="_blank" rel="noopener">Skyview Estates</a></li>
