--- a/src/components/AdsSection.astro
+++ b/src/components/AdsSection.astro
@@ -1,6 +1,6 @@
 <div id="ads">
   <div class="container">
-    <a href="https://www.cloudways.com/en/?id=2039910&amp;a_bid=5c89ffc4" target="_top"><img src="//www.cloudways.com/affiliate/accounts/default1/banners/5c89ffc4.png" alt="" title="" width="728" height="90" /></a><img style="border:0" src="https://www.cloudways.com/affiliate/scripts/imp.php?id=2039910&amp;a_bid=5c89ffc4" width="1" height="1" alt="" />
+    <a href="https://www.cloudways.com/en/?id=2039910&amp;a_bid=61dde566" target="_top"><img src="//www.cloudways.com/affiliate/accounts/default1/banners/61dde566.jpg" alt="The Ultimate Managed Hosting Platform" title="The Ultimate Managed Hosting Platform" width="728" height="90" /></a><img style="border:0" src="https://www.cloudways.com/affiliate/scripts/imp.php?id=2039910&amp;a_bid=61dde566" width="1" height="1" alt="" />
   </div>
 </div>
 
