loading eager top images

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,7 +26,7 @@ if (typeof window !== 'undefined') {
   <div class="container">
     <div class="header-logo">
       <a href="/">
-        <Image src={HeaderLogo} alt="Code Coral Logo" width="112" height="70" />
+        <Image src={HeaderLogo} alt="Code Coral Logo" width="112" height="70" loading="eager" />
       </a>
     </div>
     <nav class="header-nav">
