--- a/src/components/WorkSection.astro
+++ b/src/components/WorkSection.astro
@@ -4,8 +4,6 @@ import LivingChurch from '../images/living-church-graphic.jpg';
 import GoodSense from '../images/good-sense-graphic.jpg';
 import Creators from '../images/creators-brush-graphic.webp';
 import Rottweiler from '../images/rottweiler-graphic.webp';
-// import InteriorDetails from '../images/interior-details-graphic.jpg';
-// import HillHearBetter from '../images/hill-hear-better-graphic.jpg';
 ---
 
 <div id="work">
@@ -15,7 +13,7 @@ import Rottweiler from '../images/rottweiler-graphic.webp';
 
       <div class="work-item">
         <a href="https://living-church.com" target="_blank" rel="noopener">
-          <Image src={LivingChurch} alt="Living Church Graphic" width="1100" height="620" />
+          <Image src={LivingChurch} alt="Living Church Graphic" width="1100" height="620" loading="eager" />
         </a>
         <p>Designed & Developed: Code Coral</p>
         <h3>
@@ -26,7 +24,7 @@ import Rottweiler from '../images/rottweiler-graphic.webp';
 
       <div class="work-item">
         <a href="https://creatorsbrush.com" target="_blank" rel="noopener">
-          <Image src={Creators} alt="Creator's Brush" width="1100" height="620" />
+          <Image src={Creators} alt="Creator's Brush" width="1100" height="620" loading="eager" />
         </a>
         <p>Designed & Developed: Code Coral</p>
         <h3><a href="https://creatorsbrush.com" target="_blank" rel="noopener">Creator's Brush</a></h3>
