--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -7,15 +7,15 @@
       <div><input name="bot-field" /></div>
       <div>
         <label for="fname">First Name</label>
-        <input type="text" name="fname" aria-labelledby="fname" required />
+        <input type="text" name="fname" id="fname" aria-labelledby="fname" required />
       </div>
       <div>
         <label for="lname">Last Name</label>
-        <input type="text" name="lname" aria-labelledby="lname" required />
+        <input type="text" name="lname" id="lname" aria-labelledby="lname" required />
       </div>
       <div>
         <label for="email">Email</label>
-        <input type="email" name="email" aria-labelledby="email" required />
+        <input type="email" name="email" id="email" aria-labelledby="email" required />
       </div>
       <div>
         <label for="type">Project Type</label>
@@ -37,7 +37,7 @@
       </div>
       <div>
         <label for="details">Additional Details...</label>
-        <textarea name="details" aria-labelledby="details"></textarea>
+        <textarea name="details" id="details" aria-labelledby="details"></textarea>
       </div>
       <div>
         <button type="submit" class="btn"><span>Talk To You Soon!</span></button>
