update bg image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import AdsSection from '../components/AdsSection.astro';
 
 <style>
 	main.homepage-main {
-    background-image: url(../images/coral-bg-both.png);
+    background-image: url(../images/coral-bg-both.webp);
     background-position: center 65px;
     background-repeat: repeat-x;
     background-size: contain;
