--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -1,7 +1,7 @@
 <div id="contact">
   <div class="container">
     <h2>The Path To My Inbox</h2>
-    <p>Let me know how I can help you with your website needs. Whether it's over virtual coffee or real pad thai let's get together!</p>
+    <p>Looking for a web designer near you? Whether it's over virtual coffee or real pad thai let's get together!</p>
     <form name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" action="/thanks">
       <input type="hidden" name="form-name" value="contact" />
       <div><input name="bot-field" /></div>
